[tool.poetry]
name = "botosurf"
version = "0.1.0"
description = "surf aws with boto"
authors = ["Sam Holden <sam.holden@capgemini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.78"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pylint = "^3.0.2"
coverage = "^7.3.2"
pytest = "^7.4.3"
Sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
